--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ script:
 #   bucket_name:
 #   bucket_path:
 #   on:
-#     branch: master
+#     branch: main
 #   access_key_id: $AWS_ACCESS_KEY
 #   secret_access_key: $AWS_SECRET_KEY
