--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,8 +21,12 @@ server {
     proxy_set_header Connection "Upgrade";
   }
 
-  location /api {
-    rewrite /api/(.*) /$1 break;
-    proxy_pass http://api;
-  }
+  # TODO: remove this? find a workaround
+  # reverse proxy might not work since api has an interface
+  # the links in the page do not have /api/ prepended
+  # causing user to be redirected to client page
+  # location /api {
+  #   rewrite /api/(.*) /$1 break;
+  #   proxy_pass http://api;
+  # }
 }
