--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,10 +21,10 @@ server {
     proxy_set_header Connection "Upgrade";
   }
 
-  # TODO: remove this? find a workaround
-  # reverse proxy might not work since api has an interface
-  # the links in the page do not have /api/ prepended
-  # causing user to be redirected to client page
+  # TODO: find a workaround
+  # reverse proxy might not work since django api has an interface
+  # the links in the page do not have /api/ prepended which causes
+  # user to be redirected to client page
   # location /api {
   #   rewrite /api/(.*) /$1 break;
   #   proxy_pass http://api;
