--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 
 script:
   - docker run -e CI=true crownkira/digitalace-frontend-test yarn run test
-  - docker compose run api sh -c "python manage.py wait_for_db && python manage.py test"
+  - docker compose run api sh -c "python manage.py wait_for_db && python manage.py test && flake8"
 # after_success:
 #   - docker build -t crownkira/digitalace-frontend ./digitalace-frontend
 #   - docker build -t crownkira/digitalace-backend ./digitalace-backend
