--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: generic
+python:
+  - '3.9'
 sudo: required
 services:
   - docker
@@ -6,9 +8,12 @@ services:
 before_install:
   - docker build -t crownkira/digitalace-frontend-test -f ./digitalace-frontend/Dockerfile.dev ./digitalace-frontend
 
+install:
+  - pip install docker-compose
+
 script:
   - docker run -e CI=true crownkira/digitalace-frontend-test yarn run test
-  - docker compose run api sh -c "python manage.py wait_for_db && python manage.py test && flake8 --ignore=E501"
+  - docker-compose run api sh -c "python manage.py wait_for_db && python manage.py test && flake8 --ignore=E501"
 # after_success:
 #   - docker build -t crownkira/digitalace-frontend ./digitalace-frontend
 #   - docker build -t crownkira/digitalace-backend ./digitalace-backend
