--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pip install docker-compose
 
 script:
-  - docker run -e CI=true crownkira/digitalace-frontend-test yarn run test
+  - docker run -e CI=true crownkira/digitalace-frontend-test yarn run test --passWithNoTests
   - docker-compose run api sh -c "python manage.py wait_for_db && python manage.py test && flake8 --ignore=E501"
 # after_success:
 #   - docker build -t crownkira/digitalace-frontend ./digitalace-frontend
