--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,8 +25,8 @@ server {
   # reverse proxy might not work since django api has an interface
   # the links in the page do not have /api/ prepended which causes
   # user to be redirected to client page
-  # location /api {
-  #   rewrite /api/(.*) /$1 break;
-  #   proxy_pass http://api;
-  # }
+  location /api {
+    rewrite /api/(.*) /$1 break;
+    proxy_pass http://api;
+  }
 }
