--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,7 +14,7 @@ server {
   }
 
   # allow websocket connection
-  location /sockerjs-node {
+  location /sockjs-node {
     proxy_pass http://client;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
