--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,12 +21,8 @@ server {
     proxy_set_header Connection "Upgrade";
   }
 
-  # TODO: find a workaround
-  # reverse proxy might not work since django api has an interface
-  # the links in the page do not have /api/ prepended which causes
-  # user to be redirected to client page
   location /api {
-    rewrite /api/(.*) /$1 break;
+    # rewrite /api/(.*) /$1 break;
     proxy_pass http://api;
   }
 }
