Configure settings for production

--- a/docker-compose.old.yml
+++ b/docker-compose.old.yml
@@ -29,10 +29,10 @@ services:
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:5000"
     environment:
-      - DB_HOST=db
-      - DB_NAME=api
-      - DB_USER=postgres
-      - DB_PASS=postgres_password
+      - PGHOST=db
+      - PGNAME=api
+      - PGUSER=postgres
+      - PGPASSWORD=postgres_password
     depends_on:
       - db
   client:
