--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,11 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: docker build -t crownkira/digitalace-frontend ./digitalace-frontend
+      - name: Build the Docker image
+        run: docker build -t crownkira/digitalace-frontend ./digitalace-frontend
       - run: docker build -t crownkira/digitalace-backend ./digitalace-backend
       - run: docker build -t crownkira/digitalace-nginx ./nginx
       - run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_ID }}" --password-stdin
@@ -18,9 +18,6 @@ jobs:
       - run: docker push crownkira/digitalace-backend
       - run: docker push crownkira/digitalace-nginx
 
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
       - name: Checkout Latest Repo
         uses: actions/checkout@main
         
