Fix issues with action branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,17 +19,17 @@ jobs:
       - run: docker push crownkira/digitalace-nginx
 
       - name: Checkout Latest Repo
-        uses: actions/checkout@main
+        uses: actions/checkout@master
         
       - name: Generate Deployment Package
         run: zip -r deploy.zip * 
       
       - name: Get timestamp
-        uses: gerred/actions/current-time@main
+        uses: gerred/actions/current-time@master
         id: current-time
       
       - name: Run string replace
-        uses: frabert/replace-string-action@main
+        uses: frabert/replace-string-action@master
         id: format-time
         with:
           pattern: '[:\.]+'
