--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout Latest Repo
         uses: actions/checkout@master
+        with:
+          submodules: 'recursive'
 
       - name: Build the Docker image
         run: docker build -t crownkira/digitalace-frontend ./digitalace-frontend
