--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 
 script:
   - docker run -e CI=true crownkira/digitalace-frontend-test yarn run test --passWithNoTests
-  - docker-compose run api sh -c "python manage.py wait_for_db && python manage.py test && flake8 --ignore=E501,F401,F403,F405"
+  - docker-compose run api sh -c "python manage.py wait_for_db && python manage.py test && flake8 --ignore=E501,F401,F403,F405,W503"
 
 after_success:
   - docker build -t crownkira/digitalace-frontend ./digitalace-frontend
